// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sign Up Form Will create a new user and sign them in if successful 1`] = `
Array [
  Array [
    "toast",
    Object {
      "description": "Well, this is embarrassing... the code did something it wasn't supposed to. Please contact support and try to describe what you were doing when the error occurred.",
      "id": "unexpected-exception",
      "message": "An Unexpected Error Has Occurred",
      "type": "is-danger",
    },
  ],
]
`;

exports[`Sign Up Form Will show an error toast if email conflicts 1`] = `
Array [
  "toast",
  Object {
    "description": "Email address is already in use. Do you already have an account? Try logging in or resetting your password.",
    "id": "create-account-failed",
    "message": "Unable to create new account",
    "type": "is-danger",
  },
]
`;

exports[`Sign Up Form Will show an error toast if username conflicts 1`] = `
Array [
  "toast",
  Object {
    "description": "Username is already taken. Please choose another one.",
    "id": "create-account-failed",
    "message": "Unable to create new account",
    "type": "is-danger",
  },
]
`;

exports[`Sign Up Form Will validate fields 1`] = `"Username is required."`;

exports[`Sign Up Form Will validate fields 2`] = `"Email address is required."`;

exports[`Sign Up Form Will validate fields 3`] = `"Password is required."`;

exports[`Sign Up Form Will validate fields 4`] = `"Please confirm your password."`;

exports[`Sign Up Form Will validate fields 5`] = `"Username can only contain letters, numbers, underscores, dots, and dashes."`;

exports[`Sign Up Form Will validate fields 6`] = `"Email address is invalid."`;

exports[`Sign Up Form Will validate fields 7`] = `"Password does not meet strength requirements."`;

exports[`Sign Up Form Will validate fields 8`] = `"Passwords must match."`;
